--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-# Sponsor me via: https://ifdian.net/a/skymoon
+Sponsor me via: https://ifdian.net/a/skymoon
 
 # These are supported funding model platforms
 
