--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
-Sponsor me via: https://ifdian.net/a/skymoon
 
 # These are supported funding model platforms
 
@@ -14,4 +13,4 @@ lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cl
 polar: # Replace with a single Polar username
 buy_me_a_coffee: # Replace with a single Buy Me a Coffee username
 thanks_dev: # Replace with a single thanks.dev username
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
+custom: ['https://ifdian.net/a/skymoon'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
